API implementation and SQL Boiler
