# apiserver/api_asset_mapping_service.go
@@ -1,38 +1,0 @@
-/*
- * Hailo app API
- *
- * API to access and configure the Hailo app
- *
- * API version: 1.0.0
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package apiserver
-
-import (
-	"context"
-	"errors"
-	"net/http"
-)
-
-// AssetMappingApiService is a service that implements the logic for the AssetMappingApiServicer
-// This service should implement the business logic for every endpoint for the AssetMappingApi API.
-// Include any external packages or services that will be required by this service.
-type AssetMappingApiService struct {
-}
-
-// NewAssetMappingApiService creates a default api service
-func NewAssetMappingApiService() AssetMappingApiServicer {
-	return &AssetMappingApiService{}
-}
-
-// GetAssetMappingsByConfig -
-func (s *AssetMappingApiService) GetAssetMappingsByConfig(ctx context.Context, configId int32) (ImplResponse, error) {
-	// TODO - update GetAssetMappingsByConfig with the required logic for this service method.
-	// Add api_asset_mapping_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
-
-	//TODO: Uncomment the next line to return response Response(200, []AssetMapping{}) or use other options such as http.Ok ...
-	//return Response(200, []AssetMapping{}), nil
-
-	return Response(http.StatusNotImplemented, nil), errors.New("GetAssetMappingsByConfig method not implemented")
-}
