# apiserver/api_configuration_service.go
@@ -1,60 +1,0 @@
-/*
- * Hailo app API
- *
- * API to access and configure the Hailo app
- *
- * API version: 1.0.0
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package apiserver
-
-import (
-	"context"
-	"errors"
-	"net/http"
-)
-
-// ConfigurationApiService is a service that implements the logic for the ConfigurationApiServicer
-// This service should implement the business logic for every endpoint for the ConfigurationApi API.
-// Include any external packages or services that will be required by this service.
-type ConfigurationApiService struct {
-}
-
-// NewConfigurationApiService creates a default api service
-func NewConfigurationApiService() ConfigurationApiServicer {
-	return &ConfigurationApiService{}
-}
-
-// GetConfiguration - Get FDS endpoint
-func (s *ConfigurationApiService) GetConfiguration(ctx context.Context, configId int32) (ImplResponse, error) {
-	// TODO - update GetConfiguration with the required logic for this service method.
-	// Add api_configuration_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
-
-	//TODO: Uncomment the next line to return response Response(200, Configuration{}) or use other options such as http.Ok ...
-	//return Response(200, Configuration{}), nil
-
-	return Response(http.StatusNotImplemented, nil), errors.New("GetConfiguration method not implemented")
-}
-
-// GetConfigurations - Get all FDS endpoints
-func (s *ConfigurationApiService) GetConfigurations(ctx context.Context) (ImplResponse, error) {
-	// TODO - update GetConfigurations with the required logic for this service method.
-	// Add api_configuration_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
-
-	//TODO: Uncomment the next line to return response Response(200, []Configuration{}) or use other options such as http.Ok ...
-	//return Response(200, []Configuration{}), nil
-
-	return Response(http.StatusNotImplemented, nil), errors.New("GetConfigurations method not implemented")
-}
-
-// PutConfiguration - Creates or update an FDS endpoint
-func (s *ConfigurationApiService) PutConfiguration(ctx context.Context, configId int32) (ImplResponse, error) {
-	// TODO - update PutConfiguration with the required logic for this service method.
-	// Add api_configuration_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
-
-	//TODO: Uncomment the next line to return response Response(200, Configuration{}) or use other options such as http.Ok ...
-	//return Response(200, Configuration{}), nil
-
-	return Response(http.StatusNotImplemented, nil), errors.New("PutConfiguration method not implemented")
-}
